test/should-fail/badoctal.f3
/**
 * Ensure that malformed octal numbers are caught by the lexer/parser
 * @test/compile-error
 */
var v = 054689;
v = 077.234;
v = [04..066];



